# Airline_AI_Assistant_Toolcalling_SQLiteDB_Multimodal-Apps

./: README.md  airline_ai_assistant.ipynb  main.py  multi-modal_image_audio.ipynb  pyproject.toml
