[project]
name = "ai-emgineer-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "anthropic>=0.116.0",
    "beautifulsoup4>=4.15.0",
    "diffusers>=0.39.0",
    "gradio>=6.20.0",
    "import-ipynb>=0.2",
    "ipython>=9.15.0",
    "jupyterlab>=4.6.1",
    "kokoro>=0.9.4",
    "notebook>=7.6.0",
    "openai>=2.44.0",
    "pillow>=12.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "safetensors>=0.8.0",
    "soundfile>=0.14.0",
    "torch>=2.13.0",
    "transformers>=5.14.1",
]
